--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -11,8 +11,8 @@
 /* Variables */
 :root {
     --avatar-size: 32px;
-    --background-image: url('https://i.imgur.com/7SbtKvw.png');
-    --home-image: url('https://i.imgur.com/233d55Y.gif');
+    --background-image: url('https://images.alphacoders.com/648/648557.jpg');
+    --home-image: url('https://i7.nhentai.net/galleries/2209025/14.jpg');
     --background-solid: #161921;
     --background-solid-dark: #101218;
     --background-solid-darker: #0c0e12;
