--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -12,7 +12,7 @@
 :root {
     --avatar-size: 32px;
     --background-image: url('https://images.alphacoders.com/648/648557.jpg');
-    --home-image: url('https://i.imgur.com/7DCtIcK.jpeg');
+    --home-image: url('https://media.tenor.com/GdmNvzhT24YAAAAC/ganyu-genshin-impact.gif');
     --background-solid: #161921;
     --background-solid-dark: #101218;
     --background-solid-darker: #0c0e12;
