--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -15,7 +15,7 @@
     --home-image: url('https://media.tenor.com/GdmNvzhT24YAAAAC/ganyu-genshin-impact.gif');
     --background-solid: #161921;
     --background-solid-dark: #101218;
-    --background-solid-darker: #1f2330;
+    --background-solid-darker: #101218;
     --accent: 37, 172, 232;
     --accent-alt: 29, 101, 134;
 }
